feat: add upload funciton
